--- a/src/server/projects/detail/edit.njk
+++ b/src/server/projects/detail/edit.njk
@@ -97,7 +97,7 @@
                 <p>{{ change.changes.commentary.to }}</p>
               {% endif %}
               <p class="govuk-body-s">
-                <a href="/projects/{{ project.id }}/history/{{ change.id }}/archive" class="govuk-link govuk-link--no-visited-state">Archive this update</a>
+                <a href="/projects/{{ project.id }}/history/{{ change.id }}/archive?returnTo=edit" class="govuk-link govuk-link--no-visited-state">Archive this update</a>
               </p>
             </div>
           </div>
