--- a/src/server/common/macros/status-tag.njk
+++ b/src/server/common/macros/status-tag.njk
@@ -6,14 +6,16 @@
     'GREEN_AMBER': 'govuk-tag--green govuk-tag--yellow',
     'AMBER': 'govuk-tag--yellow',
     'AMBER_RED': 'govuk-tag--yellow govuk-tag--red',
-    'RED': 'govuk-tag--red'
+    'RED': 'govuk-tag--red',
+    'TBC': 'govuk-tag--grey'
   } %}
   {% set defaultLabelMap = {
     'GREEN': 'GREEN',
     'GREEN_AMBER': 'GREEN',
     'AMBER': 'AMBER',
     'AMBER_RED': 'AMBER',
-    'RED': 'RED'
+    'RED': 'RED',
+    'TBC': 'TBC'
   } %}
   {% if statusClassMap|length > 0 %}
     {% set classMap = statusClassMap %}
@@ -36,10 +38,12 @@
     <strong class="govuk-tag govuk-tag--green govuk-tag--uppercase">GREEN</strong>
       <strong class="govuk-tag govuk-tag--yellow govuk-tag--uppercase">AMBER</strong>
     </span>
+  {% elif status == 'TBC' %}
+    <strong class="govuk-tag govuk-tag--grey govuk-tag--uppercase">TBC</strong>
   {% elif classMap[status] and labelMap[status] %}
     <strong class="govuk-tag {{ classMap[status] }} govuk-tag--uppercase">{{ labelMap[status] }}</strong>
   {% else %}
-    <strong class="govuk-tag govuk-tag--grey govuk-tag--uppercase">UNKNOWN</strong>
+    <strong class="govuk-tag govuk-tag--grey govuk-tag--uppercase">TBC</strong>
   {% endif %}
 {% endmacro %}
 
