--- a/src/server/projects/detail/index.njk
+++ b/src/server/projects/detail/index.njk
@@ -70,7 +70,7 @@
         <p class="govuk-body govuk-!-margin-bottom-4">
           <a href="/projects/{{ project.id }}/manage" class="govuk-link">Manage project</a>
           <span class="govuk-!-margin-left-4">
-            <a href="/projects/{{ project.id }}/assessment" class="govuk-link">Manage assessments</a>
+            <a href="/projects/{{ project.id }}/assessment" class="govuk-link">Add Service Standard update</a>
           </span>
         </p>
       {% endif %}
@@ -149,8 +149,14 @@
                   {% endif %}
                   
                   {% if entry.changes.commentary %}
-                    <p class="govuk-body govuk-!-margin-bottom-0">
+                    <p class="govuk-body govuk-!-margin-bottom-2">
                       {{ entry.changes.commentary.to }}
+                    </p>
+                  {% endif %}
+                  
+                  {% if isAuthenticated and (entry.changes.status or entry.changes.commentary) %}
+                    <p class="govuk-body-s govuk-!-margin-top-3 govuk-!-margin-bottom-0">
+                      <a href="/projects/{{ project.id }}/history/{{ entry.id }}/archive?returnTo=detail" class="govuk-link">Archive this update</a>
                     </p>
                   {% endif %}
                 </div>
