feat: add cards

--- a/src/server/projects/detail/index.njk
+++ b/src/server/projects/detail/index.njk
@@ -118,7 +118,7 @@
       {% endset %}
 
       {% set engagementTabHtml %}
-        <h2 class="govuk-heading-m">Project Engagement</h2>
+        <h2 class="govuk-heading-m">Project engagement</h2>
         <p class="govuk-body">Timeline of key project changes and updates.</p>
         
         {% if projectHistory and projectHistory.length > 0 %}
